--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<title>OTHER, Inc.</title>
 </head>
 <body>
-	Announcing: OTHER, Inc.
-	A new kind of media company.
+	<pre>
+		Announcing: OTHER, Inc.
+		A new kind of media company.
+		<!-- <a href="https://x.com/other_inc_media">@other_inc_media</a> on twitter -->
+		@other_inc_media on twitter
 
-	@other_inc_media on twitter
+		DM for more info/sign up for waitlist
 
-	DM for more info/sign up for waitlist
-
-	donate here: <a href="https://ko-fi.com/supercollider">https://ko-fi.com/supercollider</a>
+		donate here: <a href="https://ko-fi.com/supercollider">https://ko-fi.com/supercollider</a>
+	</pre>
 </body>
 </html>
