--- a/index.html
+++ b/index.html
@@ -4,17 +4,37 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>OTHER, Inc.</title>
+
+	<style>
+		body {
+			margin-left: 7.5rem;
+			font-family: monospace;
+		}
+
+		section h1 {
+			font-size: 1.9rem;
+		}
+
+		ul {
+			list-style-type: none;
+		}
+	</style>
 </head>
 <body>
-	<pre>
-		Announcing: OTHER, Inc.
-		A new kind of media company.
-		<!-- <a href="https://x.com/other_inc_media">@other_inc_media</a> on twitter -->
-		@other_inc_media on twitter
+		<section id="main">
+			<h1>Announcing: OTHER, Inc.</h1>
+			<h2>A new kind of media company.</h2>
+			<!-- <a href="https://x.com/other_inc_media">@other_inc_media</a> on twitter -->
+			<p>@other_inc_media on twitter</p>
+			<p>DM for more info/sign up for waitlist</p>
+			<p>donate here: <a href="https://ko-fi.com/supercollider">https://ko-fi.com/supercollider</a></p>
+		</section>
 
-		DM for more info/sign up for waitlist
-
-		donate here: <a href="https://ko-fi.com/supercollider">https://ko-fi.com/supercollider</a>
-	</pre>
+		<section id="???">
+			<h2>???</h2>
+			<ul>
+				<li><a href="https://samfortunato.github.io/js-physics-engine/">ONE?</a></li>
+			</ul>
+		</section>
 </body>
 </html>
